# CittaaHealthServices

./: .gitignore  CNAME  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  INVESTOR_DEMO_GUIDE.md  PARENT_INSTRUCTION_MANUAL.md  PILOT_TESTING_GUIDE.md  PR_FRONTEND_CITTAA.md  README.md  README_DEPLOY.md  TESTING_GUIDE.md  TESTING_SCENARIOS.md  VM_DEPLOYMENT.md  app.py  audio_converter.py  deploy_investor_demo.sh  docker-compose-deploy.yml  docker-compose.yml  microphone_recorder.py  package-lock.json  package.json  pr_description.md  prototype_video_script.md  railway.toml  render.yaml  requirements.txt  secure_storage.py  test_vocalysis.py  vercel.json  vocalysis.py  vocalysis_clean.py
VocalysisPremium.xcodeproj/: project.pbxproj
android/: build.gradle.kts  settings.gradle.kts
api/: Dockerfile  app_main.py  main.py  pyproject.toml  requirements.txt  submit-report.js  upload-pdf-report.js
backend/: Dockerfile  pyproject.toml  requirements.txt  setup.py
backend/app/: __init__.py  cli.py  main.py
backend/app/middleware/: security.py
backend/app/ml_models/: attention_model.pt  cnn_model.pt  ensemble_model.pt  mlp_model.pt  model_info.json  rnn_model.pt  scaler.json  train_vocalysis_model.py
backend/app/models/: __init__.py  clinical_assessment.py  clinical_trial.py  database.py  mongodb.py  prediction.py  user.py  voice_sample.py
backend/app/routers/: admin.py  auth.py  clinical_trial.py  dashboard.py  predictions.py  psychologist.py  voice.py
backend/app/schemas/: __init__.py  prediction.py  user.py  voice.py
backend/app/services/: __init__.py  data_export.py  email_service.py  error_reporting.py  gemini_client.py  gemini_service.py  pdf_service.py  personalization_service.py  synthetic_data_generator.py  voice_analysis.py
backend/app/utils/: __init__.py  config.py
backend/tests/: load_test.py
backend/vocalysis-api/: .env.example  pyproject.toml
backend/vocalysis-api/app/: config.py  database.py  main.py
backend/vocalysis-api/app/models/: __init__.py
backend/vocalysis-api/app/routers/: __init__.py  admin.py  auth.py  coupons.py  payments.py  psychologists.py  trials.py
cittaa-backend/: .env  pyproject.toml
cittaa-backend/app/: auth.py  config.py  content_filter.py  database.py  main.py  models.py
cittaa-backend/app/routers/: __init__.py  analytics.py  auth.py  children.py  content.py  devices.py  institutions.py  mobile.py  schools.py
cittaa-backend/app/services/: mobile_profile_generator.py
cittaa-frontend/: index.html  package-lock.json  package.json
cittaa-mobile/: App.tsx  app.json  package-lock.json  package.json
cittaa_family_dashboard/: .env  index.html  package-lock.json  package.json  vite.config.ts
cittaa_family_safety_backend/: cittaa_family_safety.db  migrate_db.py  pyproject.toml
colab/: README.md  vocalysis_notebook.py
docs/: N8N_WORKFLOW_UPGRADE_GUIDE.md  VOCALYSIS_ARCHITECTURE_DOCUMENT.md  VOCALYSIS_DOCUMENTATION.md  psychologist-report-form.html  psychologist-report-upload.html
frontend/: .env.production  .eslintrc.cjs  .gcloudignore  Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js
mobile_mockups/: android_child_interface.md  android_parent_dashboard.md  ios_child_interface.md  ios_parent_dashboard.md
testing/: test_report_vocalysis_20251204.md
ui-mockups/: ios-android-mockups.html
video_assets/: demo_video_plan.md  live_demo_description.md  live_demo_list.txt  live_demo_script.md  slide_list.txt  video_description.md  video_narration_script.md  (+1 more)
(+182 files in other folders)
