[tool.poetry]
name = "vocalysis-backend"
version = "1.0.0"
description = "Vocalysis Voice-based Mental Health Screening API"
authors = ["CITTAA Health Services <info@cittaa.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
pyjwt = "^2.8.0"
bcrypt = "^4.1.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
librosa = "^0.10.1"
soundfile = "^0.12.1"
numpy = "^1.26.3"
scipy = "^1.12.0"
scikit-learn = "^1.4.0"
python-dotenv = "^1.0.0"
httpx = "^0.26.0"
email-validator = "^2.0.0"
openpyxl = "^3.1.2"
pandas = "^2.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
